objects/IntelliMail__Configuration__c.object
<CustomObject>
    <fields>
        <fullName>IntelliMail__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this setting to disable/enable the IntelliMail service.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Banner_Colour__c</fullName>
        <inlineHelpText>6 digit hexadecimal code to change the default banner colour.</inlineHelpText>
        <label>Banner Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Days__c</fullName>
        <formula>CASE( IntelliMail__Deletion_Range__c,
&quot;1 Week Old&quot;,7,
&quot;2 Weeks Old&quot;,14,
&quot;4 Weeks Old&quot;,28,
&quot;8 Weeks Old&quot;,56,
&quot;12 Weeks Old&quot;, 84,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Deletion_Range__c</fullName>
        <label>Deletion Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week Old</fullName>
                </value>
                <value>
                    <fullName>2 Weeks Old</fullName>
                </value>
                <value>
                    <fullName>4 Weeks Old</fullName>
                </value>
                <value>
                    <fullName>8 Weeks Old</fullName>
                </value>
                <value>
                    <fullName>12 Weeks Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntelliMail__Footer_Link_Right__c</fullName>
        <inlineHelpText>Change the URL that the text on the IntelliMail footer points to.</inlineHelpText>
        <label>Footer Link Right</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Footer_Text_Left__c</fullName>
        <inlineHelpText>Provides the option to change the footer text on IntelliMail reports</inlineHelpText>
        <label>Footer Text Left</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Footer_Text_Right__c</fullName>
        <inlineHelpText>Provides the option to change the footer text on IntelliMail reports</inlineHelpText>
        <label>Footer Text Right</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__From_Name__c</fullName>
        <inlineHelpText>Allows the customisation of the email From Name.</inlineHelpText>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Header_Text__c</fullName>
        <inlineHelpText>Provides the option to add custom header text to IntelliMail reports</inlineHelpText>
        <label>Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Instance__c</fullName>
        <description>Which instance is this Salesforce org running on? (e.g. ap1, ap2, eu0...)</description>
        <inlineHelpText>Which instance is this Salesforce org running on? (e.g. ap1, ap2, eu0...)</inlineHelpText>
        <label>Instance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Remove_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Removes the filter information from reports</inlineHelpText>
        <label>Remove Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Remove_Hyperlinks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to remove hyperlinks from all reports and dashboards.</inlineHelpText>
        <label>Remove Hyperlinks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Schedule_Id__c</fullName>
        <label>Schedule Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Show_Footer_Link__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Provides the option to remove the link from footer text on IntelliMail emails.</inlineHelpText>
        <label>Show Footer Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Show_Footer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Provides the option to remove the footer from IntelliMail reports</inlineHelpText>
        <label>Show Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Show_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Provides the option to remove header from IntelliMail reports</inlineHelpText>
        <label>Show Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Show_Logo__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Hide or show the header logo.</inlineHelpText>
        <label>Show Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Subject__c</fullName>
        <inlineHelpText>Change the Subject of the outgoing email.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Text_Colour__c</fullName>
        <inlineHelpText>Hexadecimal value to change the text colour on IntelliMail reports.</inlineHelpText>
        <label>Text Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IntelliMail__Banner_Colour</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(IntelliMail__Banner_Colour__c, &quot;#&quot;)</errorConditionFormula>
        <errorDisplayField>IntelliMail__Banner_Colour__c</errorDisplayField>
        <errorMessage>Please enter your 6 digit hexadecimal code without the # symbol</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntelliMail__Text_Colour</fullName>
        <active>true</active>
        <description>Ensures the text colour hexadecimal code doesn&apos;t start with a #</description>
        <errorConditionFormula>BEGINS(IntelliMail__Text_Colour__c, &quot;#&quot;)</errorConditionFormula>
        <errorDisplayField>IntelliMail__Text_Colour__c</errorDisplayField>
        <errorMessage>Please enter your 6 digit hexadecimal code without the # symbol</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntelliMail__Validate_Link_URL</fullName>
        <active>true</active>
        <description>ensures the footer link url starts with http:// or https://</description>
        <errorConditionFormula>NOT(OR(BEGINS(IntelliMail__Footer_Link_Right__c, &quot;http://&quot;),BEGINS(IntelliMail__Footer_Link_Right__c, &quot;https://&quot;), ISBLANK(IntelliMail__Footer_Link_Right__c)))</errorConditionFormula>
        <errorDisplayField>IntelliMail__Footer_Link_Right__c</errorDisplayField>
        <errorMessage>Please ensure your URL beings with http:// or https://</errorMessage>
    </validationRules>
</CustomObject>